fix(campaign) Better visibility on campaign button

--- a/site/web/app/themes/sage/assets/styles/common/_global.scss
+++ b/site/web/app/themes/sage/assets/styles/common/_global.scss
@@ -134,6 +134,10 @@ h2:after {
   border-color: #933;
 }
 
+.campaign-button {
+  border: 1px solid #933;
+}
+
 #ghiduri-section {
   padding-bottom: 80px;
 }
